--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,7 +12,13 @@ updates:
       dependency-type: "production"
       patterns:
         - "*"
+      update-types:
+        - "minor"
+        - "patch"
     development-dependencies:
       dependency-type: "development"
       patterns:
         - "*"
+      update-types:
+        - "minor"
+        - "patch"
